MGS-1193 alignment fix and color fix

--- a/resources/scss/components/_component.notification.scss
+++ b/resources/scss/components/_component.notification.scss
@@ -104,7 +104,7 @@ $notification_padding: 14px;
 
       .notification__beta-box {
         display: inline-block;
-        background: black;
+        background: $color__grey--dark;
         color: $color_gold;
         padding: 7px 14px;
         text-transform: uppercase;
@@ -134,7 +134,7 @@ $notification_padding: 14px;
       }
 
       .notification__close {
-        top: 0;
+        top: -5px;
         right: 0;
         background: url("../images/icons/grey_arrow_down.png") no-repeat;
         @include image-2x('../images/icons/grey_arrow_down_@2x.png', 35px, 35px);
